# robotic-arm-paint

./: .gitignore  AGENT_HANDOFF.md  README.md  initial_plan.md  pyproject.toml  requirements.txt
configs/: arm.default.yaml  iphone.default.yaml  workspace.default.yaml
docs/: calibration.md  coordinate_systems.md  hardware_bringup_checklist.json  hardware_identification.md  milestones.md  product_growth_prd.md  setup_mac.md  software_frontload_tasks.json  svg_support.md  technical_analysis_oo_design.md  verification.md
hardware/firmware/arduino_ascii_servo_bridge/: arduino_ascii_servo_bridge.ino
hardware/mounts/marker_holder/: README.md
src/painterbot/: __init__.py  config.py
src/painterbot/apps/: __init__.py  _common.py  bringup.py  calibrate_workspace.py  draw_shape.py  draw_svg.py  manual_jog.py
src/painterbot/calibration/: __init__.py  homography.py  pose_calibration.py
src/painterbot/control/: __init__.py  arm.py  id_assignment.py  preflight.py  serial_controller.py  servo.py
src/painterbot/drawing/: __init__.py  path_sampler.py  plan.py  preview.py  shapes.py  stroke_planner.py  (+1 more)
tests/: conftest.py  test_bringup_cli.py  test_calibration.py  test_calibration_app_headless.py  test_calibration_dry_run.py  test_config.py  test_control.py  test_drawing.py  test_drawing_plan.py  test_drawing_preflight.py  test_dry_run.py  test_fake_sts3215.py  test_hardware_checklist.py  test_id_assignment.py  test_iphone.py  test_pose_calibration.py  test_preview.py  test_servo_preflight.py  test_stroke_planner.py  test_svg_loader.py  test_verification_docs.py
(+5 files in other folders)
